--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #fff;
-	font-family: Monda, sans-serif;
+	font-family: 'Carrois Gothic SC', sans-serif;
 	color: #999;
 }
 a {
@@ -11,7 +11,7 @@ a:hover {
 	text-decoration: underline;
 }
 #header {
-	font-size: 30px;
+	font-size: 50px;
 	font-weight: bold;
 	color: rgb(153, 153, 153);
 }
@@ -33,6 +33,7 @@ a:hover {
 }
 #mainWrapper {
 	padding: 30px 0 30px 0;
+	font-size:25px;
 }
 
 #footer {
